terraform/full/subnet.tf
resource "azurerm_subnet" "subnet_all" {
  name                 = var.subnet_name_all
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet_all.name
  address_prefixes     = ["10.0.1.0/24"]
  service_endpoints    = ["Microsoft.AzureCosmosDB"] 
}
